# finance_world_model

./: .gitignore  02_stage1_single_vector_no_events.ipynb  04_evaluate_2016.ipynb  EDA.ipynb  FiLM_alternative_architecture.md  GDELT_EDA.ipynb  commodity_data_pipeline.ipynb  commodity_dataset_v1.xlsx  event_data_pipeline_plan_0417.md  event_summary_EDA.ipynb  gdelt_events_with_summaries.csv  gdelt_output.txt  google_cx.txt  kaggle_api_test.ipynb  main.py  nyt_guardian_archive_fetch.ipynb  nyt_stage2_201510_201512_pt4_failures.json  pyproject.toml  qwen-3-market-impact-filter.ipynb  qwen3_nyt_commodity_filter.ipynb  stage2_event_expansion.ipynb  stage2_event_expansion.py  stage2_event_expansion_kaggle.py  xgb_wti_baseline.ipynb
FiLM notebooks/: 01_precompute_event_embeddings.ipynb  02_stage1_single_vector.ipynb  03_stage2_qlora.ipynb  20260411_architecture_discussion.md  model_architecture_v1_FiLM.md  plan_20260405.md  world-model-v1-step2-stage-1-baseline.ipynb  world-model-v1-step2-stage1.ipynb
archived/0404/: 01_precompute_event_embeddings.ipynb  02_train_film_world_model.ipynb  03_evaluate_film_model.ipynb
data/: combined_commodity_data.csv  data_dictionary.json
data/embeddings/: gdelt_2015_bge.npy
data/nyt_archive/: nyt_2015_01.parquet  nyt_2015_02.parquet  nyt_2015_03.parquet  nyt_2015_04.parquet  nyt_2015_05.parquet  nyt_2015_06.parquet  nyt_2015_07.parquet  nyt_2015_08.parquet  nyt_2015_09.parquet  nyt_2015_10.parquet  nyt_2015_11.parquet  (+121 more)
data_fetching_notebooks/: gdelt_events_gemini_parsing.ipynb
wti_notebooks/: xgb_wti_hptuning.ipynb
(+27 files in other folders)
