[project]
name = "finance-world-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=4.51.0",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.45.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "duckduckgo-search>=6.0",
    "requests>=2.33.1",
    "pyarrow>=23.0.1",
    "fastparquet>=2026.3.0",
    "sentence-transformers>=5.4.1",
    "scikit-learn>=1.8.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
